# pdms

./: .env  .gitignore  Cargo.toml
migrations/: 20251102211935_create_users_table.up.sql  20251108123608_make_users_not_null.down.sql  20251108123608_make_users_not_null.up.sql
src/: api_doc.rs  main.rs  main.rs~  state.rs
src/db/: mod.rs  test_utils.rs  users.rs
src/handlers/: mod.rs  user_handlers.rs
src/models/: user.rs
