[package]
name = "pdms"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"

# Date Time stamps
chrono = "0.4"

# Serialize / Deserialize
serde = "1"

# API OpenApi Doc
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }